Running-the-backend :octocat:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,12 @@
 		"consequatur",
 		"crossorigin",
 		"cupiditate",
+		"dbname",
 		"ldquo",
+		"mongodb",
 		"rdquo",
-		"rsquo"
+		"rsquo",
+		"rtpil",
+		"xdini"
 	]
 }
